--- a/customer-service-dev.yml
+++ b/customer-service-dev.yml
@@ -5,7 +5,7 @@ server:
   message: Hello from dev environment!
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cust_master
+    url: jdbc:mysql://localhost:3306/customerdb
     username: root
     password: 1080
     driver-class-name: com.mysql.cj.jdbc.Driver
