--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -1,18 +1,21 @@
 global:
-  message: welcome to order service!
+  message: welcome to order-service!
 server:
   port: 8083
-  message: Hello from dev environment!
+  message: hello from dev environment!
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/order_master
+  datasoource:
+    url: jdbc:h2:mem:orderdb
     username: root
-    password: 1080
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    password: root
+    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    open-in-view: false
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
