--- a/customer-service.yml
+++ b/customer-service.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: customer-service
   datasource:
-    url: jdbc:mysql://localhost:3306/cust_master
+    url: jdbc:mysql://localhost:3306/customerdb
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
