--- a/product-service.yml
+++ b/product-service.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: product-service
   datasource:
-    url: jdbc:mysql://localhost:3306/prod_master
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:h2:mem:productdb
+    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: none
