--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,11 +1,22 @@
 spring:
   application:
     name: customer-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/customerdb
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: false
+logging:
+  level:
+    root: INFO
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+
+
     
