--- a/order-service.yml
+++ b/order-service.yml
@@ -1,11 +1,24 @@
 spring:
   application:
     name: order-service
-  datasource:
-    url: jdbc:h2:mem:orderdb
-    driver-class-name: org.h2.Driver
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: false
+logging:
+  level:
+    root: INFO
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+
+
+    
+
     
