--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -7,7 +7,7 @@ spring:
   datasoource:
     url: jdbc:h2:mem:productdb
     username: root
-    password: root
+    password: 1080
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
