--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -5,7 +5,7 @@ server:
   message: hello from dev environment!
 spring:
   datasoource:
-    url: jdbc:h2:mem:productdb
+    url: jdbc:h2:mem:productdb_dev
     username: root
     password: 1080
     driver-class-name: org.h2.Driver
