--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -40,6 +40,12 @@ management:
     web:
       exposure:
         include: "*"
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
 
 resilience4j:
   circuitbreaker:
