--- a/order-service-prod.yml
+++ b/order-service-prod.yml
@@ -35,6 +35,12 @@ management:
     web:
       exposure:
         include: "*"
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
 
 resilience4j:
   circuitbreaker:
