--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -1,18 +1,44 @@
 global:
-  message: welcome to product service!
+  message: welcome to product-service!
+  
 server:
   port: 8082
-  message: Hello from prod environment!
+  message: hello from prod environment!
+  
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/productdb_prod
+  application:
+    name: product-service
+    
+  datasoource:
+    url: jdbc:h2:mem:productdb_prod
     username: root
     password: 1080
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.h2.Driver
+    
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     open-in-view: false
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    
+    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        format_sql: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
