--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -1,33 +1,29 @@
 global:
   message: welcome to product-service!
-  
+
 server:
   port: 8082
   message: hello from prod environment!
-  
+
 spring:
   application:
     name: product-service
-    
-  datasoource:
-    url: jdbc:h2:mem:productdb_prod
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/productdb_prod
     username: root
     password: 1080
-    driver-class-name: org.h2.Driver
-    
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     open-in-view: false
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
       hibernate:
         format_sql: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
 
 eureka:
   client:
