--- a/order-service.yml
+++ b/order-service.yml
@@ -7,7 +7,7 @@ logging:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
 management:
   endpoints:
     web:
