--- a/customer-service-prod.yml
+++ b/customer-service-prod.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://mysql-customer:3306/customerdb_prod
     username: root
-    password: 1080
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
