--- a/order-service-prod.yml
+++ b/order-service-prod.yml
@@ -10,10 +10,10 @@ spring:
     name: order-service  
     
   datasource:
-    url: jdbc:mysql://mysql-order:3306/ordersdb_prod
+    url: jdbc:mysql://mysql-order:3306/orderdb_prod
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1080
+    password: root
     
   jpa:
     hibernate:
