--- a/product-service-prod.yml
+++ b/product-service-prod.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://mysql-product:3306/productdb_prod
     username: root
-    password: 1080
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
