--- a/customer-service.yml
+++ b/customer-service.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: customer-service
+  config:
+    import: optional:configserver:http://config-service:8888
 logging:
   level:
     root: INFO
