--- a/order-service.yml
+++ b/order-service.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: order-service
+  config:
+    import: optional:configserver:http://config-service:8888
 logging:
   level:
     root: INFO
@@ -16,9 +18,4 @@ management:
   endpoint:
     health:
       show-details: always
-
-
-
-    
-
-    
+  
