--- a/product-service.yml
+++ b/product-service.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: product-service
+  config:
+    import: optional:configserver:http://config-service:8888   
 logging:
   level:
     root: INFO
